src/objects/Form_Data__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Flow_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flow Data</label>
        <referenceTo>Flow_Data__c</referenceTo>
        <relationshipLabel>Form Data</relationshipLabel>
        <relationshipName>Form_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Form Data</relationshipLabel>
        <relationshipName>Form_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <label>Form Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FD-{0000}</displayFormat>
        <label>Form Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>